# excel-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  __init__.py  cf_debug.py  demo_llm_usage.py  example_usage.py  excel_extractor.py  excel_parser.py  external_source.xlsx  final_model.xlsm  pyproject.toml  requirements.txt  setup.py  test_file_generator.py  test_llm_analysis.py  test_parser.py
docs/: LLM_TESTING_GUIDE.md  PROJECT_SUMMARY.md  README.md  excel_error_catalog.md  intermediate_model_analysis.md  intermediate_model_data_api_examples.py  intermediate_model_data_demo_prompts.md  intermediate_model_data_llm_prompts.md
documentation/: progress_reports.md
examples/: demo_file_generator.py  demo_llm_analysis.py  demo_llm_usage.py  demo_parser.py  example_usage.py
excel_files/: complex_model.xlsx  enterprise_model.xlsx  final_model.xlsm  mycoolsample.xlsx  mycoolsample_extracted_data.json  mycoolsample_extractor_report.md  sample_model.xlsx
reports/: intermediate_model_data.json  mycoolsample 2.json  mycoolsample.analysis.json  mycoolsample.json  mycoolsample.md
src/excel_analyzer/: __init__.py  cli.py  click_cli.py  error_sniffer_cli.py  excel_error_sniffer.py  excel_extractor.py  extractor_cli.py  probabilistic_error_detector.py
test_files/: Book 3.xlsx  README.md  advanced_model.xlsx  intermediate_model.xlsx  mycoolsample.analysis.json  mycoolsample.md  simple_model.xlsx
tests/: __init__.py  test_array_formula_anchoring_detector.py  test_array_formula_spill_errors_detector.py  test_circular_named_ranges_detector.py  test_conditional_formatting_overlap_conflicts_detector.py  test_copy_paste_formula_gaps_detector.py  test_cross_sheet_anchoring_detector.py  test_cross_sheet_reference_errors_detector.py  test_data_type_inconsistencies_in_lookup_tables_detector.py  test_external_data_connection_failures_detector.py  test_extractor.py  test_false_range_end_detection_detector.py  test_formula_range_vs_data_range_discrepancy_detector.py  test_incomplete_drag_formula_detector.py  test_inconsistent_anchoring_in_ranges_detector.py  test_inconsistent_date_formats_detector.py  test_inconsistent_formula_application_detector.py  test_lookup_function_anchoring_detector.py  test_missing_dollar_sign_anchors_detector.py  test_over_anchored_references_detector.py  test_parser.py  test_partial_formula_propagation_detector.py  test_precision_errors_in_financial_calculations_detector.py  test_volatile_functions_detector.py  test_wrong_row_column_anchoring_detector.py
