[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-analyzer"
version = "0.1.0"
description = "A powerful tool for converting complex Excel financial models into standardized Python code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thomas", email = "thomas@example.com"}
]
maintainers = [
    {name = "Thomas", email = "thomas@example.com"}
]
keywords = ["excel", "financial", "models", "analysis", "pandas", "openpyxl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "et_xmlfile>=2.0.0",
    "networkx>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tomanizer/excel-analyzer"
Repository = "https://github.com/tomanizer/excel-analyzer"
Documentation = "https://github.com/tomanizer/excel-analyzer#readme"
"Bug Tracker" = "https://github.com/tomanizer/excel-analyzer/issues"

[project.scripts]
excel-analyzer = "excel_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*", "docs*", "examples*", "reports*", "venv*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 